# athenstest

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose-validation.yml  docker-compose.yml  nginx.conf  pyproject.toml  template_ostrails.json
.github/scripts/: validate_files.py
.github/workflows/: check_file.yml  docker-build.yml
sample_data/: test.json  test1.json  test4.json
